23-12-2006 Qball <Qball@sarine.nl>
	* src/misc.c:	Optimize mpd_song_markup_escape so it does less
	useless alloc's/free's

12-12-2006 Qball <Qball@sarine.nl>
	* pixmaps/spinner.png: 		Removed
	* pixmaps/media-artist.svg: 	Removed
	* pixmaps/media-album.svg: 	Removed

10-12-2006 Qball <Qball@sarine.nl>
	* src/misc.c: Escape song->file aswell.
	* src/edit_markup.c: Re-add esf_reload

06-12-2006 Qball <qball@sarine.nl>
	* doc/*: removal of old obsoltete doc's
	* doc/Manual.txt: updates
	* doc/images/:	added document images

05-12-2006 Qball <Qball@Sarine.nl>
	* src/*: Cleanup of old comments, mostly c++ style comments

03-12-2006  Qball <Qball@sarine.nl>
	* src/main.c:	Add a --clean-cover-db option.

02-12-2006 Qball <Qball@sarine.nl>
	* glade/*.glade: Replace cms.qballcow.nl sarine.nl
	* glade/*.glade: Replace qballcow.nl with sarine.nl
	* po/pl.po:	Update polish translation

29-11-2006 Qball <Qball@qballcow.nl
	* Changelog: Start using it again. (yeah I know; about time).
	* src/config1.c: Change printf's to debug_printf's (and include
	libmpd/debug_printf.h to make this posible.
	* src/playlist3-metadata.c: Use Replace instead of "play", to make it
	more consistent with the rest of gmpc.
	* src/metadata.[c|h]: Add (void) to the void meta_data_destroy()
	function argument defenition.

19-12-2005 Qball <Qball@qballcow.nl>
	* Changed configure script to check for gtk/glib seperately,
	this to "fix" the annoyance of pkg_check_modules not reporting what
	dependency is misisng

29-10-2005 Qball <Qball@qballcow.nl>
	* Moved more stuff in player.c to new signal.
	* Made dependency for fixed libmpd signals
	* Added display showing repeat/volume/random changes.. even not
	initiate by gmpc
	* code cleanups... now compiles with -ansi.
	* restoring position after hide now works again.
	* glade/image path are now retrieved using
	gmpc_get_full_{glade|image}_path. this is needed for win32 installer.


07-10-2005 Qball <Qball@qballcow.nl>
	* apply DJWLindenaar's win32 patch
